disclaimers about py-wsi

--- a/_posts/2018-02-22-py-wsi.md
+++ b/_posts/2018-02-22-py-wsi.md
@@ -10,7 +10,7 @@ tags:
 - wsi
 ---
 
-And... I published my first actual Python package! A large, often unexpectedly time-consuming aspect of deep learning with whole slide images (WSI) is the data preparation phase. The images are gigabytes in size and simple things such as saving and loading patches can be painful. **My new Python Package py_wsi allows for intuitive, painless patch sampling using OpenSlide, automatic labeling from Aperio ImageScope XML annotation files, and provides functions for saving these patches and their meta data into [lightning memory-mapped databases](http://www.lmdb.tech/doc/)**. The package can be [forked from GitHub](https://github.com/ysbecca/py-wsi) or installed via ```pip install py_wsi``` . It is *highly recommended to download version >= 1.0*.
+A large, often unexpectedly time-consuming aspect of deep learning with whole slide images (WSI) is the data preparation phase. The images are gigabytes in size and simple things such as saving and loading patches can be painful. **My new Python Package py_wsi allows for intuitive, painless patch sampling using OpenSlide, automatic labeling from Aperio ImageScope XML annotation files, and provides functions for saving these patches and their meta data into [lightning memory-mapped databases](http://www.lmdb.tech/doc/)**. It is meant for fast prototyping, and will later include extensions to save to hdf5 files. The package can be [forked from GitHub](https://github.com/ysbecca/py-wsi) or installed via ```pip install py_wsi``` . It is *highly recommended to download version >= 1.0*.
 
 <!--excerpt-->
 
@@ -80,11 +80,11 @@ Lim et. al in "An analysis of image storage systems for scalable training of dee
 
 Some of the strong arguments against using LMDB include:
 
-- approximate database size must be known in advance
+- approximate database size must be known in advance (```py-wsi``` calculates this by quickly iterating over all the images and multiplying the tile size by the tile grid dimensions.)
 - larger patch sizes result in more overflow pages, which may affect performance
 - not the *most* memory-efficient storage method (note the superlative)
 
 #### Conclusion
 
-I hope this was helpful somewhat to those who are getting used to navigating whole slide images. py-wsi is still in its early stages, so feel welcome to submit any issues [on the GitHub page](https://github.com/ysbecca/py-wsi). If you have suggestions for additional functionality, I invite you to fork the project and submit a pull request! 
+I hope this was helpful somewhat to those who are getting used to navigating whole slide images. ```py-wsi``` is still in its early stages, so feel welcome to submit any issues [on the GitHub page](https://github.com/ysbecca/py-wsi). If you have suggestions for additional functionality, I invite you to fork the project and submit a pull request! 
 
